--- a/FuseSys.cabal
+++ b/FuseSys.cabal
@@ -16,8 +16,10 @@ cabal-version:       >=1.10
 library
   hs-source-dirs:      src
   exposed-modules:     FuseBindings
+                     , Logging
   build-depends:       base >= 4.7 && < 5
                      , HFuse
+                     , stm
   default-language:    Haskell2010
                      
 
