--- a/FuseSys.cabal
+++ b/FuseSys.cabal
@@ -17,9 +17,12 @@ library
   hs-source-dirs:      src
   exposed-modules:     FuseBindings
                      , Logging
-  build-depends:       base >= 4.7 && < 5
-                     , HFuse
+                     , CInterop
+  build-depends:       HFuse
+                     , base >= 4.7 && < 5
+                     , filepath
                      , stm
+                     , unix
   default-language:    Haskell2010
                      
 
