--- a/stack.yaml
+++ b/stack.yaml
@@ -41,6 +41,7 @@ packages:
 # (e.g., acme-missiles-0.3)
 extra-deps:
   - HFuse-0.2.4.5
+  - hspec-2.2.4
 
 # Override default flag values for local packages and extra-deps
 flags: {}
