--- a/FuseSys.cabal
+++ b/FuseSys.cabal
@@ -18,6 +18,7 @@ library
   exposed-modules:     FuseBindings
                      , Logging
                      , CInterop
+                     , Posix.Directory
 
   build-depends:       HFuse
                      , QuickCheck
@@ -28,6 +29,10 @@ library
                      , process
                      , stm
                      , unix
+                     , transformers
+                     , bifunctors
+                     , bytestring
+                     , utf8-string
   default-language:    Haskell2010
                      
 
@@ -38,6 +43,7 @@ executable FuseSys-exe
   build-depends:       FuseSys
                      , HFuse
                      , base
+                     , filepath
   default-language:    Haskell2010
                      
 
